--- a/blog/toc.css
+++ b/blog/toc.css
@@ -2,12 +2,47 @@ html {font-size: 14px;}
 
 body {
     margin: auto;
-    width: 60%;
-    font-size: 1.3rem;
+    width: 50%;
     background-color: #fffff8;
+    color: #111;
+    font-size: 1.4rem;
+    line-height: 2.0rem;
+}
+
+h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    margin-bottom: 4rem;
+    font-size: 4rem;
+    font-weight: 400;
+}
+
+a:link, a:visited { 
+    color: inherit; 
+    text-decoration: underline;
 }
 
 span.datetime {
     font-size: 1.1rem;
     font-style: italic;
 }
+
+.posts {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+
+.credits  {
+    font-size: 1.0rem ;
+    line-height: 1.0rem;
+}
+
+
+body .rc-scout__link:link, .rc-scout__link:visited {
+    color: #111;
+}
+
+
