--- a/blog/tufte.css
+++ b/blog/tufte.css
@@ -175,8 +175,7 @@ h1 > code, h2 > code, h3 > code { font-size: 0.80em; }
 
 pre.code { font-size: 0.9rem;
            width: 52.5%;
-           margin-left: 2.5%;
-           overflow-x: auto; }
+           margin-left: 2.5%;}
 
 pre.code.fullwidth { width: 90%; }
 
