--- a/blog/intro-reinforcement-learning-tic-tac-toe/article.css
+++ b/blog/intro-reinforcement-learning-tic-tac-toe/article.css
@@ -1,8 +1,8 @@
 
 button {
-    width: 10.0rem;
-    height: 10.0rem;
-    font-size: 3.0rem;
+    width: 5.0rem;
+    height: 5.0rem;
+    font-size: 2.0rem;
     font-weight: 900;
 }
 
@@ -12,3 +12,11 @@ button {
 }
 
 
+@media only screen and (min-width: 600px) {
+    button {
+        width: 10.0rem;
+        height: 10.0rem;
+        font-size: 3.0rem;
+        font-weight: 900;
+    }
+}
