--- a/blog/toc.css
+++ b/blog/toc.css
@@ -21,11 +21,18 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 5rem;
-    margin-bottom: 4rem;
-    font-size: 4rem;
     font-weight: 400;
-    white-space: nowrap;
+    font-size: 2.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+@media only screen and (min-width: 800px) {
+    h1 {
+        margin-bottom: 4rem;
+        margin-top: 5rem;
+        font-size: 4rem;
+    }
 }
 
 a:link, a:visited { 
