--- a/blog/tufte.css
+++ b/blog/tufte.css
@@ -4,27 +4,35 @@
 /* Tufte CSS styles */
 html { font-size: 14px; }
 
-body { width: 87.5%;
-       margin-left: auto;
-       margin-right: auto;
-       padding-left: 12.5%;
-       background-color: #fffff8;
+body { background-color: #fffff8;
        color: #111;
        max-width: 1400px;
+       padding-left: 4%;
        counter-reset: sidenote-counter; }
+
+
+@media only screen and (min-width: 800px) {
+    body {
+        width: 87.5%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 12.5%;
+    }
+}
 
 h1 { font-weight: 400;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
      margin-right: 5%;
-     font-size: 3.2rem;
+     font-size: 2.2rem;
      line-height: 1; }
+
 
 h2 { font-style: italic;
      font-weight: 400;
      margin-top: 2.1rem;
      margin-bottom: 1.4rem;
-     font-size: 2.2rem;
+     font-size: 2.0rem;
      line-height: 1; }
 
 h3 { font-style: italic;
@@ -34,6 +42,27 @@ h3 { font-style: italic;
      margin-bottom: 1.4rem;
      line-height: 1; }
 
+@media only screen and (min-width: 800px) {
+    h1 { 
+         margin-top: 4rem;
+         margin-bottom: 1.5rem;
+         margin-right: 5%;
+         font-size: 3.2rem;
+         line-height: 1; }
+
+    h2 { 
+         margin-top: 2.1rem;
+         margin-bottom: 1.4rem;
+         font-size: 2.2rem;
+         line-height: 1; }
+
+    h3 { 
+         font-size: 1.7rem;
+         margin-top: 2rem;
+         margin-bottom: 1.4rem;
+         line-height: 1; }
+}
+
 hr { display: block;
      height: 1px;
      width: 55%;
@@ -41,13 +70,6 @@ hr { display: block;
      border-top: 1px solid #ccc;
      margin: 1em 0;
      padding: 0; }
-
-p.subtitle { font-style: italic;
-             margin-top: 1rem;
-             margin-bottom: 1rem;
-             font-size: 1.8rem;
-             display: block;
-             line-height: 1; }
 
 .numeral { font-family: et-book-roman-old-style; }
 
@@ -67,33 +89,52 @@ p { margin-top: 1.4rem;
     padding-right: 0;
     vertical-align: baseline; }
 
-/* Chapter Epigraphs */
-div.epigraph { margin: 5em 0; }
-
-div.epigraph > blockquote { margin-top: 3em;
-                            margin-bottom: 3em; }
-
-div.epigraph > blockquote, div.epigraph > blockquote > p { font-style: italic; }
-
-div.epigraph > blockquote > footer { font-style: normal; }
-
-div.epigraph > blockquote > footer > cite { font-style: italic; }
-/* end chapter epigraphs styles */
 
 blockquote { font-size: 1.4rem; }
 
-blockquote p { width: 55%;
-               margin-right: 40px; }
+blockquote p { width: 95%;
+               margin-right: 20px; }
+
+@media only screen and (min-width: 800px) {
+    blockquote p { width: 55%;
+                   margin-right: 40px; }
+}
+
 
 blockquote footer { width: 55%;
                     font-size: 1.1rem;
                     text-align: right; }
 
-section > p, section > footer, section > table { width: 55%; }
+section > p, section > footer, section > table { width: 95%; }
 
-/* 50 + 5 == 55, to be the same width as paragraph */
-section > ol, section > ul { width: 50%;
+@media only screen and (min-width: 800px) {
+    section > p, section > footer, section > table { width: 55%; }
+}
+
+#footnotes {
+    width: 90%;
+    padding-bottom: 4.0rem;
+}
+
+#footnotes ol {
+    font-size: 1.1rem;
+}
+
+@media only screen and (min-width: 800px) {
+    #footnotes {
+        display: none;
+    }
+}
+
+
+section > ol, section > ul { width: 90%;
                              -webkit-padding-start: 5%; }
+
+@media only screen and (min-width: 800px) {
+    /* 50 + 5 == 55, to be the same width as paragraph */
+    section > ol, section > ul { width: 50%;
+                                 -webkit-padding-start: 5%; }
+}
 
 li:not(:first-child) { margin-top: 0.25rem; }
 
@@ -125,7 +166,9 @@ a:link, a:visited { color: inherit; text-decoration: underline; }
 /* Sidenotes, margin notes, figures, captions */
 img { max-width: 100%; }
 
-.sidenote, .marginnote { float: right;
+.sidenote, .marginnote { 
+    display: none;
+    float: right;
                          clear: right;
                          margin-right: -60%;
                          width: 50%;
@@ -135,6 +178,13 @@ img { max-width: 100%; }
                          line-height: 1.3;
                          vertical-align: baseline;
                          position: relative; }
+
+
+@media only screen and (min-width: 800px) {
+    .sidenote, .marginnote {
+        display: inline;
+    }
+}
 
 .sidenote-number { counter-increment: sidenote-counter; }
 
@@ -174,8 +224,16 @@ h1 > code, h2 > code, h3 > code { font-size: 0.80em; }
 .marginnote > code, .sidenote > code { font-size: 1rem; }
 
 pre.code { font-size: 0.9rem;
-           width: 52.5%;
+           overflow-x: auto;
+            width: 92.5%;
            margin-left: 2.5%;}
+
+@media only screen and (min-width: 800px) {
+    pre.code {
+        overflow-x: none;
+        width: 52.5%;
+    }
+}
 
 pre.code.fullwidth { width: 90%; }
 
